fix: jumpy editor with correct config

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -201,7 +201,7 @@ eox-map {
 }
 
 .card.editor {
-  height: calc(100vh - 200px);
+  height: calc(100vh - 110px);
 }
 
 .card.scroll {
